# pdf

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  justfile
crates/pdf_app/: TODO.md  package-lock.json  package.json
crates/pdf_app/src/: App.tsx  index.css
crates/pdf_app/src-tauri/: Cargo.toml  tauri.conf.json
crates/pdf_app/src-tauri/capabilities/: default.json
crates/pdf_app/src-tauri/src/: lib.rs  main.rs
crates/pdf_app/src/components/: Editor.tsx  PdfViewer.tsx
crates/pdf_app/src/lib/: paths.ts
crates/pdf_cli/: Cargo.toml
crates/pdf_cli/src/: main.rs
crates/pdf_core/: Cargo.toml  build.rs
crates/pdf_core/src/: block.rs  default_config.toml  lib.rs  parser.rs  typst.rs
examples/: debug_lines.rs  inspect.rs
src/: block.rs  config.rs  lib.rs  main.rs  parser.rs  typst.rs
